Closed
Bug 1210630
Opened 10 years ago
Closed 7 years ago
Section elements with accessible names should be mapped the same as ARIA role region
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla65
| Tracking | Status | |
|---|---|---|
| firefox65 | --- | fixed |
People
(Reporter: jdiggs, Assigned: MarcoZ)
References
(Blocks 2 open bugs)
Details
Attachments
(1 file)
Steps to reproduce:
1. Load data:text/html,<section aria-label="foo">foo</section> in Firefox
2. Use Accerciser to examine the accessible role for the section element object
Expected results: As per the HTML accessibility mapping spec [1], it should be mapped the same as WAI-ARIA role region, the mapping for which can be found here [2].
Actual results: The section element is mapped to ROLE_SECTION in ATK (and IA2?). While that mapping is logical at first glance, it means the mapping for the div element and the mapping for the section element are the same.
To follow the specs precisely, if the section element has a name, it would be mapped to ATK_ROLE_LANDMARK. If Orca should treat a named section element as a landmark, that's perfect. If Orca should not treat a named section element as a landmark, mapping it to ATK_ROLE_PANEL would be the more appropriate mapping.
[1] https://rawgit.com/w3c/aria/master/html-aam/html-aam.html#el-section
[2] https://rawgit.com/w3c/aria/master/core-aam/core-aam.html#role-map-region
| Reporter | ||
Comment 1•9 years ago
|
||
Ping?
| Assignee | ||
Comment 3•7 years ago
|
||
Pushed by mzehe@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/be829221e462
Section elements with accessible names should be mapped the same as ARIA role region, r=Jamie
Comment 5•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
You need to log in
before you can comment on or make changes to this bug.
Description
•