Bug 1210630 - Section elements with accessible names should be mapped the same as ARIA role region, r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D9480

--HG--
extra : moz-landing-system : lando